Stop search input field from overflowing search box

--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@
   bottom: 3px;
   margin-bottom: 5px;
   margin-left: 5px;
-  width:100%;
+  width:99%;
   border: none;
   outline: none;
 }
